--- a/jsons/translations/English.properties
+++ b/jsons/translations/English.properties
@@ -5606,7 +5606,7 @@ Hill =
 Mountain = 
 
  # Requires translation!
-Snow = Desert
+Snow = Permafrost
 
  # Requires translation!
 Provides a one-time Production bonus to the closest city when cut down = Provides a one-time Production bonus to the closest city when cleared
@@ -5617,7 +5617,7 @@ Forest = Rubble
 Jungle = Ruins
 
  # Requires translation!
-Marsh = 
+Marsh = Toxic Waste
 
  # Requires translation!
 Fallout = 
