Massive graphics update with assorted fixes

--- a/jsons/translations/English.properties
+++ b/jsons/translations/English.properties
@@ -378,7 +378,7 @@ One City Challenge =
  # Requires translation!
 No Barbarians = 
  # Requires translation!
-No Ancient Ruins = 
+No Ancient Ruins = No Survivor Camps
  # Requires translation!
 No Natural Wonders = 
  # Requires translation!
@@ -868,7 +868,7 @@ Our proposed trade request is no longer relevant! =
  # Requires translation!
 [civName] has stolen your territory! = 
  # Requires translation!
-Clearing a [forest] has created [amount] Production for [cityName] = Clearing a [forest] has created [amount] Production for [cityName]
+Clearing a [forest] has created [amount] Production for [cityName] = Clearing the [forest] has created [amount] Production for [cityName]
  # Requires translation!
 [civName] assigned you a new quest: [questName]. = 
  # Requires translation!
@@ -1040,7 +1040,7 @@ Do you want to exit the game? =
  # Requires translation!
 Start bias: = 
  # Requires translation!
-Avoid [terrain] = 
+Avoid [terrain] = Avoid [terrain]
 
 # City screen
 
@@ -1879,8 +1879,6 @@ Stone Works =
 Library = 
 
  # Requires translation!
-'Libraries are as the shrine where all the relics of the ancient saints, full of true virtue, and all that without delusion or imposture are preserved and reposed.' - Sir Francis Bacon = 
- # Requires translation!
 Free Technology = 
  # Requires translation!
 The Great Library = 
@@ -1895,11 +1893,6 @@ Circus =
 Water Mill = 
 
  # Requires translation!
-Floating Gardens = 
-
- # Requires translation!
-'It is not so much for its beauty that the forest makes a claim upon men's hearts, as for that subtle something, that quality of air, that emanation from old trees, that so wonderfully changes and renews a weary spirit.'  - Robert Louis Stevenson = 
- # Requires translation!
 +[amount]% [stat] [cityFilter] = +[amount]% [stat] [cityFilter]
  # Requires translation!
 +[amount]% Production when constructing [unitType] units [cityFilter] = +[amount]% Production when constructing [unitType] units [cityFilter]
@@ -1913,11 +1906,9 @@ Walls =
 Walls of Babylon = 
 
  # Requires translation!
-'O, let not the pains of death which come upon thee enter into my body. I am the god Tem, and I am the foremost part of the sky, and the power which protecteth me is that which is with all the gods forever.'  - The Book of the Dead, translated by Sir Ernest Alfred Wallis Budge = 
- # Requires translation!
 -[amount]% tile improvement construction time = 
  # Requires translation!
-[amount] free [unit] units appear = 
+[amount] free [unit] units appear = [amount] free [unit] units appear
  # Requires translation!
 The Pyramids = 
 
@@ -1941,37 +1932,26 @@ Krepost =
  # Requires translation!
 +15% Combat Strength for all units when attacking Cities = 
  # Requires translation!
-Statue of Zeus = 
+Statue of Zeus = Scorched Earth
 
  # Requires translation!
 'The whole earth is the tomb of heroic men and their story is not given only on stone over their clay but abides everywhere without visible symbol woven into the stuff of other men's lives.' - Pericles = 
  # Requires translation!
 Provides a sum of gold each time you spend a Great Person = Provides a sum of water each time you spend a Great Person
- # Requires translation!
-Mausoleum of Halicarnassus = 
 
  # Requires translation!
 Lighthouse = 
 
+
  # Requires translation!
-'They that go down to the sea in ships, that do business in great waters; these see the works of the Lord, and his wonders in the deep.' - The Bible, Psalms 107:23-24 = 
- # Requires translation!
-+[amount] Sight for all [param] units = 
- # Requires translation!
-The Great Lighthouse = 
++[amount] Sight for all [param] units = +[amount] Sight for all [param] units
+
 
  # Requires translation!
 Stable = 
 
  # Requires translation!
 Cost increases by [amount] per owned city = 
- # Requires translation!
-Circus Maximus = 
-
- # Requires translation!
-'I think that if ever a mortal heard the word of God it would be in a garden at the cool of the day.'  - F. Frankfort Moore = 
- # Requires translation!
-Hanging Gardens = 
 
  # Requires translation!
 Remove extra unhappiness from annexed cities = 
@@ -1982,11 +1962,6 @@ Courthouse =
 
  # Requires translation!
 Colosseum = 
-
- # Requires translation!
-'Regard your soldiers as your children, and they will follow you into the deepest valleys; look on them as your own beloved sons, and they will stand by you even unto death.'  - Sun Tzu = 
- # Requires translation!
-Terracotta Army = 
 
  # Requires translation!
 Temple = 
@@ -2238,7 +2213,7 @@ Utopia Project =
 #################### Lines from Difficulties from Civ V - Vanilla ####################
 
  # Requires translation!
-Settler = 
+Settler = Civilian Convoy
  # Requires translation!
 Warrior = 
 
@@ -2276,7 +2251,7 @@ Spectator =
  # Requires translation!
 Receive free [unit] when you discover [tech] = Receive free [unit] when you discover [tech]
  # Requires translation!
-[unit] is earned [amount]% faster = [unit] is earned [amount]% faster
+[unit] is earned [amount]% faster = [unit] is earned at rate [amount]%
 
  # Requires translation!
 City-State Influence recovers at twice the normal rate = 
@@ -2411,7 +2386,7 @@ Each city founded increases culture cost of policies [amount]% less than normal 
  # Requires translation!
 Meritocracy = 
  # Requires translation!
-Unhappiness from population decreased by [amount]% [param] = 
+Unhappiness from population decreased by [amount]% [param] = Unhappiness from population decreased by [amount]% [param]
  # Requires translation!
 Liberty Complete = 
  # Requires translation!
@@ -2532,14 +2507,14 @@ Specialists only produce [amount]% of normal unhappiness =
  # Requires translation!
 Freedom Complete = 
  # Requires translation!
-+[amount]% yield from every [param] = 
++[amount]% yield from every [param] = +[amount]% yield from every [param]
  # Requires translation!
 Freedom = 
 
  # Requires translation!
 Populism = 
  # Requires translation!
-[param] units deal +[amount]% damage = 
+[param] units deal +[amount]% damage = [param] units deal +[amount]% damage
  # Requires translation!
 Militarism = 
  # Requires translation!
@@ -2583,7 +2558,7 @@ We feel threatened by a Barbarian Camp near our city. Please take care of it. =
  # Requires translation!
 Connect Resource = 
  # Requires translation!
-In order to make our civilizations stronger, connect [param] to your trade network. = 
+In order to make our civilizations stronger, connect [param] to your trade network. = In order to make our civilizations stronger, connect [param] to your trade network.
 
  # Requires translation!
 Construct Wonder = 
@@ -2593,12 +2568,12 @@ We recommend you to start building [param] to show the whole world your civiliza
  # Requires translation!
 Acquire Great Person = 
  # Requires translation!
-Great People can change the course of a Civilization! You will be rewarded for acquiring a new [param]. = 
+Great People can change the course of a Civilization! You will be rewarded for acquiring a new [param]. = Great People can change the course of a Civilization! You will be rewarded for acquiring a new [param].
 
  # Requires translation!
 Find Player = 
  # Requires translation!
-You have yet to discover where [param] set up their cities. You will be rewarded for finding their territories. = 
+You have yet to discover where [param] set up their cities. You will be rewarded for finding their territories. = You have yet to discover where [param] set up their cities. You will be rewarded for finding their territories.
 
  # Requires translation!
 Find Natural Wonder = 
@@ -2979,7 +2954,7 @@ Ocean =
 Coast = 
 
  # Requires translation!
-Occurs at temperature between [param] and [param2] and humidity between [param3] and [amount] = 
+Occurs at temperature between [param] and [param2] and humidity between [param3] and [amount] = Occurs at temperature between [param] and [param2] and humidity between [param3] and [amount]
  # Requires translation!
 Open terrain = 
  # Requires translation!
@@ -3010,7 +2985,7 @@ Rough terrain =
  # Requires translation!
 [amount] Strength for cities built on this terrain = 
  # Requires translation!
-[amount] Sight for [param] units = 
+[amount] Sight for [param] units = [amount] Sight for [param] units
  # Requires translation!
 Hill = 
 
@@ -3181,7 +3156,7 @@ Terrace farm =
  # Requires translation!
 Unpillagable = 
  # Requires translation!
-Ancient ruins = 
+Ancient ruins = Survivor camp
 
  # Requires translation!
 City ruins = 
@@ -3292,7 +3267,7 @@ Heal this Unit by 50 HP; Doing so will consume this opportunity to choose a Prom
  # Requires translation!
 Accuracy I = 
  # Requires translation!
-+[amount]% Strength in [param] = 
++[amount]% Strength in [param] = +[amount]% Strength in [param]
 
  # Requires translation!
 Accuracy II = 
@@ -3360,7 +3335,7 @@ Blitz =
  # Requires translation!
 Woodsman = 
  # Requires translation!
-Double movement rate through Forest and Jungle = 
+Double movement rate through Forest and Jungle = Double movement rate through Rubble and Ruins
 
  # Requires translation!
 Amphibious = 
@@ -3536,7 +3511,7 @@ Quick Study =
 [amount]% Bonus XP gain = 
 
  # Requires translation!
-Haka War Dance = 
+Haka War Dance = Disruption
  # Requires translation!
 -10% combat strength for adjacent enemy units = 
 
@@ -3775,7 +3750,7 @@ Great War Bomber =
  # Requires translation!
 Norwegian Ski Infantry = 
  # Requires translation!
-Double movement in Snow, Tundra and Hills = 
+Double movement in Snow, Tundra and Hills = Double movement in Permafrost, Tundra and Hills
 
  # Requires translation!
 Cavalry = 
@@ -3846,7 +3821,7 @@ May Paradrop up to [amount] tiles from inside friendly territory =
 Infantry = 
 
  # Requires translation!
-[amount] Sight for all [param] units = 
+[amount] Sight for all [param] units = [amount] Sight for all [param] units
 
  # Requires translation!
 Machine Gun = 
@@ -4088,3 +4063,16 @@ F1 - Open Civilopedia\nF2 - Empire overview Trades\nF3 - Empire overview Units\n
  # Requires translation!
 Ctrl-R - Toggle tile resource display\nCtrl-Y - Toggle tile yield display\nCtrl-O - Game options\nCtrl-S - Save game\nCtrl-L - Load game = 
 
+Salvaged Helicopter = Helicopter
+
+Arroyo Defender = Spearman
+
+Arroyo Greatbow = Archer
+
+Arroyo Machine Gun = Machine Gun
+
+Ghost Defender = Spearman
+
+Ghost Greatbow = Archer
+
+Ghost Machine Gun = Machine Gun
