Removed several translation-based tricks, updated open/rough terrain bonuses, added rubble and ruin to permafrost tiles

--- a/jsons/translations/English.properties
+++ b/jsons/translations/English.properties
@@ -1357,7 +1357,7 @@ You have achieved victory through the awesome power of your Culture. Your civili
  # Requires translation!
 The world has been convulsed by war. Many great and powerful civilizations have fallen, but you have survived - and emerged victorious! The world will long remember your glorious triumph! = 
  # Requires translation!
-You have achieved victory through mastery of Science! You have conquered the mysteries of nature and led your people on a voyage to a brave new world! Your triumph will be remembered as long as the stars burn in the night sky! = 
+You have achieved victory through mastery of Science! You have conquered the mysteries of nature and led your people on a voyage to a brave new world! Your triumph will be remembered as long as the stars burn in the night sky! = You have achieved victory through mastery of Science! With the Terraformer complete, you can start the arduous process of stabilising the Earth's systems to make them amenable for human life. It could take centuries, but your descendants will know that it was here that the tide was turned.\n\nIn the meantime, a Solar Shade can literally block out the sun for those that would oppose you...
  # Requires translation!
 Your civilization stands above all others! The exploits of your people shall be remembered until the end of civilizaton itself! = 
  # Requires translation!
@@ -2213,7 +2213,7 @@ Utopia Project =
 #################### Lines from Difficulties from Civ V - Vanilla ####################
 
  # Requires translation!
-Settler = Civilian Convoy
+Settler = 
  # Requires translation!
 Warrior = 
 
@@ -3794,7 +3794,7 @@ Landship =
  # Requires translation!
 Destroyer = 
  # Requires translation!
-Can attack submarines = 
+Can attack submarines = Can see invisible units
 
  # Requires translation!
 Battleship = 
