Update images for NBC Marksman and Mobile SAM, minor translation fix

--- a/jsons/translations/English.properties
+++ b/jsons/translations/English.properties
@@ -238,13 +238,13 @@ Declare Protection of [cityStateName]? =
  # Requires translation!
 Cultured = 
  # Requires translation!
-Maritime = 
+Maritime = Farming
  # Requires translation!
 Mercantile = 
  # Requires translation!
 Militaristic = 
  # Requires translation!
-Type = 
+Type = Type
  # Requires translation!
 Friendly = 
  # Requires translation!
