Small translation update

--- a/jsons/translations/English.properties
+++ b/jsons/translations/English.properties
@@ -3111,7 +3111,7 @@ Remove Jungle =
 Remove Fallout = 
 
  # Requires translation!
-Remove Marsh = 
+Remove Marsh = Remove Toxic Waste
 
  # Requires translation!
 Remove Road = 
