Fixing "[] with []" translation gap

--- a/jsons/translations/English.properties
+++ b/jsons/translations/English.properties
@@ -1612,7 +1612,7 @@ Free promotions: =
  # Requires translation!
 Free for [units] = 
  # Requires translation!
-[bonus] with [tech] = 
+[bonus] with [tech] = [bonus] with [tech]
  # Requires translation!
 Difficulty levels = 
 
