More fixes, plus introducing Mounted Worker and Wind Farm on coast

--- a/jsons/translations/English.properties
+++ b/jsons/translations/English.properties
@@ -4063,16 +4063,16 @@ F1 - Open Civilopedia\nF2 - Empire overview Trades\nF3 - Empire overview Units\n
  # Requires translation!
 Ctrl-R - Toggle tile resource display\nCtrl-Y - Toggle tile yield display\nCtrl-O - Game options\nCtrl-S - Save game\nCtrl-L - Load game = 
 
-Salvaged Helicopter = Helicopter
+Salvaged Helicopter = 
 
-Arroyo Defender = Spearman
+Arroyo Defender =
 
-Arroyo Greatbow = Archer
+Arroyo Greatbow = 
 
-Arroyo Machine Gun = Machine Gun
+Arroyo Machine Gun = 
 
-Ghost Defender = Spearman
+Ghost Defender =
 
-Ghost Greatbow = Archer
+Ghost Greatbow = 
 
-Ghost Machine Gun = Machine Gun
+Ghost Machine Gun = 
