Updating LOTS of uniques, Added Cryo Project and Arcology project, rebalanced the Hub

--- a/jsons/translations/English.properties
+++ b/jsons/translations/English.properties
@@ -1359,7 +1359,7 @@ The world has been convulsed by war. Many great and powerful civilizations have 
  # Requires translation!
 You have achieved victory through mastery of Science! You have conquered the mysteries of nature and led your people on a voyage to a brave new world! Your triumph will be remembered as long as the stars burn in the night sky! = You have achieved victory through mastery of Science! With the Terraformer complete, you can start the arduous process of stabilising the Earth's systems to make them amenable for human life. It could take centuries, but your descendants will know that it was here that the tide was turned.\n\nIn the meantime, a Solar Shade can literally block out the sun for those that would oppose you...
  # Requires translation!
-Your civilization stands above all others! The exploits of your people shall be remembered until the end of civilizaton itself! = 
+Your civilization stands above all others! The exploits of your people shall be remembered until the end of civilizaton itself! = You have begun the long wait. The earth as we know it is not livable, but perhaps it will be one day. Until then, you and your people will wait, frozen in time, waiting for a better world to revive you.
  # Requires translation!
 You have been defeated. Your civilization has been overwhelmed by its many foes. But your people do not despair, for they know that one day you shall return - and lead them forward to victory! = 
  # Requires translation!
@@ -1860,7 +1860,7 @@ in all cities with a garrison =
  # Requires translation!
 Indicates the capital city = 
  # Requires translation!
-Palace = 
+Palace = Bomb Shelter
 
  # Requires translation!
 Monument = 
@@ -2208,6 +2208,9 @@ Triggers a Cultural Victory upon completion =
 Hidden when cultural victory is disabled = 
  # Requires translation!
 Utopia Project = 
+
+# Requires translation!
+Triggers victory = Triggers cryonic preservation
 
 
 #################### Lines from Difficulties from Civ V - Vanilla ####################
@@ -3102,10 +3105,10 @@ Road =
 
 
  # Requires translation!
-Remove Forest = 
+Remove Forest = Remove Rubble
 
  # Requires translation!
-Remove Jungle = 
+Remove Jungle = Remove Ruins
 
  # Requires translation!
 Remove Fallout = 
