Changed gold to water in gold-to-science slider

--- a/jsons/translations/English.properties
+++ b/jsons/translations/English.properties
@@ -4079,3 +4079,7 @@ Ghost Defender =
 Ghost Greatbow = 
 
 Ghost Machine Gun = 
+
+Convert gold to science = Convert water to science
+
+Gold -> Science = Water -> Science
