Updated art for river Added Globalization for UN victory Removed green forest tile Added more unique units to Mariners

--- a/jsons/translations/English.properties
+++ b/jsons/translations/English.properties
@@ -18,20 +18,6 @@ Excess production for [wonder] converted to [goldAmount] gold = Excess productio
 We have captured a barbarian encampment and recovered [goldAmount] gold! = We have captured a barbarian encampment and recovered [goldAmount] water!
 
  # Requires translation!
-We have found survivors in the ruins - population added to [cityName] = We have found survivors in the camp - population added to [cityName]
- # Requires translation!
-We have discovered cultural artifacts in the ruins! (+20 Culture) = We have discovered cultural artifacts in the camp! (+20 Culture)
- # Requires translation!
-We have discovered the lost technology of [techName] in the ruins! = We have discovered the lost technology of [techName] in the camp!
-
- # Requires translation!
-An ancient tribe trains our [unitName] in their ways of combat! = Our [unitName] has gained experience from the camp!
- # Requires translation!
-We have found a stash of [amount] gold in the ruins! = We have found a stash of [amount] water in the camp!
- # Requires translation!
-We have found a crudely-drawn map in the ruins! = The camp contains maps of the nearby area!
-
- # Requires translation!
 We have received [goldAmount] Gold for discovering [naturalWonder] = We have discovered a settlement on an isolated island! The inhabitants send a gift of [goldAmount] water and offer tribute if we respect their sovereignty.
 
  # Requires translation!
@@ -243,6 +229,8 @@ Convert gold to science = Convert water to science
 Gold -> Science = Water -> Science
 
 All units move through Forest and Jungle Tiles in friendly territory as if they have roads. These tiles can be used to establish City Connections upon researching the Wheel. = All units move through Rubble and Ruins Tiles in friendly territory as if they have roads. These tiles can be used to establish City Connections upon researching the Wheel.
+
+Enemy land units must spend 1 extra movement point when inside your territory (obsolete upon Dynamite) = Enemy land units must spend 1 extra movement point when inside your territory
 
 You have achieved victory through mastery of Science! You have conquered the mysteries of nature and led your people on a voyage to a brave new world! Your triumph will be remembered as long as the stars burn in the night sky! = You have achieved victory through mastery of Science! With the Terraformer complete, you can start the arduous process of stabilising the Earth's systems to make them amenable for human life. It could take centuries, but your descendants will know that it was here that the tide was turned.\n\nIn the meantime, a Solar Shade can literally block out the sun for those that would oppose you...
 
