Introducing religion and New Afrika

--- a/jsons/translations/English.properties
+++ b/jsons/translations/English.properties
@@ -81,7 +81,7 @@ Provides a sum of gold each time you spend a Great Person = Provides a sum of wa
 Doubles Gold given to enemy if city is captured = Doubles Water given to enemy if city is captured
 
  # Requires translation!
-Enemy land units must spend 1 extra movement point when inside your territory (obsolete upon Dynamite) = 
+Enemy land units must spend 1 extra movement point when inside your territory (obsolete upon Dynamite) = Enemy land units must spend 1 extra movement point when inside your territory
 
  # Requires translation!
 Gold from all trade routes +25% = Water from all trade routes +25%
@@ -122,8 +122,6 @@ SS Stasis Chamber = Atmosphere Processor
  # Requires translation!
 50% chance of capturing defeated Barbarian naval units and earning 25 Gold = 50% chance of capturing defeated Barbarian naval units and earning 25 Water
 
- # Requires translation!
-100 Gold for discovering a Natural Wonder (bonus enhanced to 500 Gold if first to discover it) = 100 Water for discovering a Natural Wonder (bonus enhanced to 500 Water if first to discover it)
 
  # Requires translation!
 Receive triple Gold from Barbarian encampments and pillaging Cities = Receive triple Water from Barbarian encampments and pillaging Cities
@@ -163,36 +161,7 @@ Jungle = Ruins
 Marsh = Toxic Waste
 
  # Requires translation!
-Great Barrier Reef = Ship Graveyard
-
- # Requires translation!
-Old Faithful = Army Depot
-
- # Requires translation!
 Grants 500 Gold to the first civilization to discover it = Grants 500 water to the first civilization to discover it
- # Requires translation!
-El Dorado = Missile Complex
-
- # Requires translation!
-Fountain of Youth = Research Facility
-
- # Requires translation!
-Grand Mesa = Oasis
-
- # Requires translation!
-Mount Fuji = Soft Drinks Factory
-
- # Requires translation!
-Krakatoa = Isolationist Stronghold
-
- # Requires translation!
-Rock of Gibraltar = Seed Vault
-
- # Requires translation!
-Cerro de Potosi = Hydroelectric Dam
-
- # Requires translation!
-Barringer Crater = Nuclear Waste Facility
 
  # Requires translation!
 Costs [amount] gold per turn when in your territory = Costs [amount] water per turn when in your territory
@@ -213,15 +182,6 @@ Ancient ruins = Survivor camp
 No Ancient Ruins = No Survivor Camps
 
  # Requires translation!
-Double movement rate through Forest and Jungle = Double movement rate through Rubble and Ruins
-
- # Requires translation!
-Double movement in Snow, Tundra and Hills = Double movement in Permafrost, Tundra and Hills
-
- # Requires translation!
-Can attack submarines = Can see invisible units
-
- # Requires translation!
 Can undertake a trade mission with City-State, giving a large sum of gold and [amount] Influence = Can undertake a trade mission with City-State, giving a large sum of water and [amount] Influence
 
 Convert gold to science = Convert water to science
@@ -230,7 +190,6 @@ Gold -> Science = Water -> Science
 
 All units move through Forest and Jungle Tiles in friendly territory as if they have roads. These tiles can be used to establish City Connections upon researching the Wheel. = All units move through Rubble and Ruins Tiles in friendly territory as if they have roads. These tiles can be used to establish City Connections upon researching the Wheel.
 
-Enemy land units must spend 1 extra movement point when inside your territory (obsolete upon Dynamite) = Enemy land units must spend 1 extra movement point when inside your territory
-
 You have achieved victory through mastery of Science! You have conquered the mysteries of nature and led your people on a voyage to a brave new world! Your triumph will be remembered as long as the stars burn in the night sky! = You have achieved victory through mastery of Science! With the Terraformer complete, you can start the arduous process of stabilising the Earth's systems to make them amenable for human life. It could take centuries, but your descendants will know that it was here that the tide was turned.\n\nIn the meantime, a Solar Shade can literally block out the sun for those that would oppose you...
 
+Send your best explorers on a quest to discover Natural Wonders. Nobody knows the location of [naturalWonder] yet. = Send your best explorers on a quest to discover the wonders of the past. Nobody knows the location of [naturalWonder] yet.
