--- a/jsons/translations/Simplified_Chinese.properties
+++ b/jsons/translations/Simplified_Chinese.properties
@@ -800,7 +800,7 @@ May you be forgiven. = 愿神明寛怨你。
 There is still time... Brother = 还有时间改邪归正的，兄弟...
 
 Bartertown = 易物镇
-Two men enter, one man leaves! = 两人进来，一个逃亡！
+Two men enter, one man leaves! = 你们两个只有一个能活着离开这里，哈哈哈
 You run Bartertown. = 这镇归你了。
 
 Arroyo = 土崖部落
