--- a/jsons/translations/Template.properties
+++ b/jsons/translations/Template.properties
@@ -635,6 +635,17 @@ Court of Dreams =
 Death Race =
 God Box =
 
+The Mariners = 
+Deacon Hopper = 
+Marine = 
+The sea is ours, and all the dry lands shall soon be as well = 
+Ha! You think to challenge us? I hope you can swim well = 
+Damn you! We should never have left the protection of the sea. = 
+Ahoy! We are the Mariners, and we've come to reclaim the dry land from the lot of you. = 
+Greetings, land dweller. = 
+What do you want? = 
+We've got the finest goods that the sea can offer! What do you say? = 
+
 The Archive =
 We shall not go gentle into that good night! =
 After us, the deluge... =
